# praello-ai-knowledge-assistant-for-businesses

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users.py  002_documents.py
backend/src/enterprise_ai/: __init__.py  main.py
backend/src/enterprise_ai/ai/: __init__.py
backend/src/enterprise_ai/ai/agents/: graph.py  nodes.py  state.py
backend/src/enterprise_ai/ai/embeddings/: mock_embeddings.py  openai_embeddings.py
backend/src/enterprise_ai/ai/guardrails/: output_validator.py  prompt_injection.py
backend/src/enterprise_ai/ai/ingestion/: chunking.py  parsers.py
backend/src/enterprise_ai/ai/llm/: cache.py  instrumented.py  mock_llm.py  openai_llm.py  router.py  usage_tracker.py
backend/src/enterprise_ai/ai/rag/: bm25_retriever.py  confidence.py  context_compressor.py  fusion.py  hybrid_retriever.py  query_rewriter.py  reranker.py  similarity.py
backend/src/enterprise_ai/ai/tools/: base.py  email.py  factory.py  filesystem.py  github.py  (+4 more)
backend/src/enterprise_ai/api/: __init__.py  dependencies.py
backend/src/enterprise_ai/application/: __init__.py
backend/src/enterprise_ai/domain/: __init__.py  exceptions.py
backend/src/enterprise_ai/infrastructure/: __init__.py
backend/tests/: conftest.py
backend/tests/ai/: test_agent_tools.py  test_chunking.py  test_guardrails.py  test_instrumented_llm.py  test_llm_ops.py  test_parsers.py  test_rag.py
backend/tests/api/: test_agent.py  test_auth.py  test_documents.py  test_health.py  test_knowledge.py  test_llm_ops_api.py
backend/tests/application/: test_agent_service.py  test_auth_service.py  test_health_service.py  test_ingestion_service.py  test_rag_service.py
backend/tests/domain/: test_rbac.py
backend/tests/doubles/: embedding_service.py  vector_store.py
backend/tests/infrastructure/: test_vector_store.py
(+86 files in other folders)
