[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "praello-ai-knowledge-assistant"
version = "0.1.0"
description = "Praello AI Knowledge Assistant for Businesses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21.0",
    "email-validator>=2.2.0",
    "qdrant-client>=1.12.0",
    "openai>=1.58.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "aiofiles>=24.1.0",
    "rank-bm25>=0.2.2",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.coverage.run]
source = ["src/enterprise_ai"]
omit = ["*/tests/*"]
